MSSQL tests working
- Don't use hibernate import_files as this breaks MSSQL CDC
- Initialize data programmatically in AbstractDatabase